<resources>
    <string name="app_name">Mobile App lab 2.3</string>
    <string name="welcome_text">Добро пожаловать в банк!</string>
    <string name="input_data_text">Введите ваши данные</string>
    <string name="input_name_text">Имя</string>
    <string name="input_age_text">Возраст</string>
    <string name="input_currency_text">Валюта</string>
    <string name="input_password_text">Пароль</string>
    <string name="authorization_text">Авторизация</string>
    <string name="log_in_text">Вход</string>
    <string name="registration_text">Регистрация</string>
    <string name="create_account_text">Создать Аккаунт</string>
    <string name="create_account_registration_text">Создайте новый аккаунт</string>
    <string name="title_activity_news2">NewsActivity2</string>
    <string name="email_text">Email</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Статья про Криптовалюты часть 1</string>
    <string name="second_fragment_label">Статья про Криптовалюты часть 2</string>
    <string name="next">Читать дальше</string>
    <string name="previous">Вернуться</string>

    <string name="lorem_ipsum">
        Чем криптовалюта отличается от фиатных денег \n\n Криптовалюта — это электронные деньги, которые устроены совершенно иначе, чем фиатные (бумажные). Давайте сравним.
        Фиатные деньги\n
        Держатся на своеобразных «арбитрах» — это банки, платежные системы и государство. Арбитры поддерживают доверие между всеми владельцами денег и разрешают конфликты.
        Банки не допускают двойных трат и подозрительных операций. Если украдет сам банк, вмешается государство и восстановит доверие к системе.
        Государство выступает и верховным главнокомандующим: национальный ЦБ регулирует выпуск и курс валюты, инфляцию и трансграничное движение капитала.
        Фиатные деньги подвержены инфляции: в 2023 году мировые валюты в среднем обесценились на 7%.
        \n\nКриптовалюты.\n\n В классической криптовалютной системе нет ни арбитров, ни «главнокомандующих»: она полностью децентрализована, контроля нет ни у одного из участников.
        Доверие автоматизировано и оцифровано. Решение о том, проводить ли транзакцию и сколько выпускать монет, принимают все владельцы криптовалюты.
        Но действуют они не по настроению, а согласно протоколу криптовалютной системы. Никто не может заморозить счет владельца криптовалюты.
        Криптовалютная сеть не привязана к географии: узлы сети (это могут быть и смартфоны или мощные пулы серверов) могут располагаться в любой точке мира.
        В некоторые криптовалюты встроен механизм дефляции: число монет ограничено, а их выпуск сокращается по определенному графику. Другие криптомонеты периодически «сжигаются» для повышения их стоимости.
        Сегодня на криптовалютном рынке зарегистрировано больше 2 млн активов. Для простоты все они называются криптовалютами или токенами.
        Но множество проектов используют только часть механизма классической криптовалюты, пренебрегая и гуманистической философией крипты, и безопасностью пользователей.
        Поэтому сначала мы рассмотрим, как устроена первая, классическая криптовалюта — биткоин. А затем проанализируем, чем отличаются от него другие активы.
        Главные особенности биткоина — децентрализация и прозрачность. Эти свойства обеспечивают безопасность и надежность системы.
        Основа монеты — блокчейн. Это цепочка сгенерированных компьютером блоков, связанных между собой и расположенных в хронологическом порядке.
        В блоки записаны все транзакции с каждой монетой начиная с ее выпуска. То есть это своеобразный открытый журнал учета, который ведут все пользователи.
        Блокчейн формируют и поддерживают владельцы криптовалюты.
        Все вместе они образуют сеть равноправных узлов (пользователей или групп пользователей).
        Такую сеть еще называют пиринговой, или P2P (от англ. peer to peer, «от равного к равному»).
        Узлы хранят блокчейн в скачанном виде на своих устройствах.
    </string>
    <string name="offers">Предложения</string>
    <string name="credit_short_text">Кредит наличными до 5 000 000</string>
    <string name="credit_full_text">Срок: от 3 месяцев до 5 лет. \n\n Сумма: до 5 000 000 ₽. \n\n Процентная ставка: станет известна после изучения данных из вашей заявки.
        На размер ставки по кредиту влияет ставка Центробанка, информация, которую вы укажете в заявке, а также ваша кредитная история.
        Банк сообщит ставку прежде, чем предложит заключить кредитный договор, — вам придет уведомление в приложении вашего банка либо позвонит наш сотрудник.</string>
    <string name="deposit_short_text">Вклады с доходом до 16% годовых</string>
    <string name="deposit_full_text">Откройте вклад или накопительный счет, получайте доход, накопите на квартиру, отпуск, учебу и другие масштабные цели \n\n
        На счастливую старость, покупку квартиры или машины \n\n
        Доходность до 16% годовых \n\n
        Срок от 3 до 24 месяцев \n\n
        Минимальная сумма — 50 000 ₽</string>
    <string name="crypto_trade_short_text">Быстрый обмен криптовалют</string>
    <string name="crypto_trade_full_text">Поддержка 24/7 \n
        Наша служба поддержки готова помочь вам в любое время суток. \n\n
        Лучшие курсы на рынке \n
        Мы сотрудничаем более чем с 20 площадками для криптотрейдинга, чтобы предложить вам самые выгодные курсы.\n\n
        Быстрые транзакции \n
        Средняя скорость транзакции составляет 5-40 минут, что позволяет оперативно воспользоваться рыночными возможностями.\n\n
        Надежная обработка средств\n
        Мы не храним криптовалюту. В целях максимальной безопасности средства зачисляются в ваш кошелек напрямую после обмена.\n\n</string>
</resources>